frame module z-index fix

--- a/themes/ardit/css/app.css
+++ b/themes/ardit/css/app.css
@@ -1217,7 +1217,7 @@ nav.navbar {
   visibility: hidden;
   position: absolute;
   top: 380px;
-  z-index: 3;
+  z-index: 2;
   transform: translateY(-50%);
 }
 
